<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#5D686C"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome_top"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/isento"
        android:gravity="center"
        android:text="@string/notifications"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/welcome_top"
        android:background="@color/grey" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/image_logo"
        android:layout_below="@+id/welcome_top">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/audio_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_corners"
                android:padding="12dp"
                android:src="@drawable/notifications_tutorial" />

            <TextView
                android:id="@+id/audio_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/audio_image"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/playfair"
                android:text="@string/notifications"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/audio_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/audio_title"
                android:layout_marginStart="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/isento"
                android:gravity="center"
                android:text="@string/enable_notifications"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>


    <TextView
        android:id="@+id/turn_on"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/image_logo"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/turn_on"
        android:layout_marginBottom="-10dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/isento_bold"
        android:background="@drawable/rounded_corners_green" />

    <ImageView
        android:layout_marginTop="-20dp"
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/bottom_layout"
        android:layout_marginBottom="-15dp"
        android:src="@drawable/arabnews_bottom" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/bottom_layout"
        android:background="@color/grey" />

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/not_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/isento"
            android:text="@string/not_now"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>